--- a/user-management/pom.xml
+++ b/user-management/pom.xml
@@ -44,6 +44,12 @@
 			<version>1.2.17</version>
 		</dependency>
 		
+		
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-mongodb</artifactId>
+		</dependency>
+		
 	</dependencies>
 	
 	
