lambok dependency added --> getter setter argument and no-arg

--- a/user-management/pom.xml
+++ b/user-management/pom.xml
@@ -50,6 +50,14 @@
 			<artifactId>spring-data-mongodb</artifactId>
 		</dependency>
 		
+		
+		<dependency>
+		    <groupId>org.projectlombok</groupId>
+		    <artifactId>lombok</artifactId>
+		    <version>1.18.16</version>
+		    <scope>provided</scope>
+		</dependency>
+
 	</dependencies>
 	
 	
